2006-12-12 [paul]	2.6.1cvs21

	* src/prefs_account.c
		complete the fix of bug 1076
		also be more verbose with the text

2006-12-12 [paul]	2.6.1cvs20

	* src/gtk/combobox.c
		fix compilation warning

2006-12-11 [colin]	2.6.1cvs19

	* src/wizard.c
		Document :port in server entry tooltips

2006-12-11 [colin]	2.6.1cvs18

	* src/main.c
		Fix compile

2006-12-11 [colin]	2.6.1cvs17

	* src/main.c
		Add failing IMAP as a reason for no
		mailbox

2006-12-11 [colin]	2.6.1cvs16

	* src/prefs_account.c
		Check for existence of inbox for local
		accounts too
	* src/wizard.c
		Allow setting the port to use for servers
		by using the usual "server.example.com:port"
		syntax. Fixes bug 1077, 'sylpheed-claws does 
		not start when IMAP server is unavailable'

2006-12-11 [colin]	2.6.1cvs15

	* src/prefs_account.c
		Prevent use of non-existing default inbox

2006-12-11 [colin]	2.6.1cvs14

	* src/prefs_account.c
		Fix sensitivity. Fixes bug 1076, 'privacy 
		options are displayed even when pgp plugin 
		not loaded / available'

2006-12-09 [colin]	2.6.1cvs13

	* manual/advanced.xml
	* src/prefs_common.c
	* src/prefs_common.h
	* src/common/ssl_certificate.c
		Add a new hidden preference, 'unsafe_ssl_certs',
		which allows to store multiple certificates per
		server/port. This is disabled by default because
		it's less secure (presenting a new certificate
		instead of a changed one raises less alarms).
		This will cause Claws to ask about an unknown
		certificate for people who have used 2.6.1cvs8
		or greater.

2006-12-09 [colin]	2.6.1cvs12

	* src/action.c
		Fix cache updating after action

2006-12-07 [wwp]	2.6.1cvs11

	* src/compose.c
		fix email address comparison when replying to all
		(avoid replying to ourselves), thanks to Colin.

2006-12-06 [paul]	2.6.1cvs10

	* src/addrharvest.c
	* src/editldap.c
	* src/expldifdlg.c
	* src/news.c
	* src/toolbar.c
	* src/common/utils.c
		...and more renaming
		Thanks to Colin

2006-12-06 [paul]	2.6.1cvs9

	* src/compose.c
	* src/messageview.c