@@ -1,3 +1,11 @@
+2006-12-12 [colin]	2.6.1cvs22
+
+	* src/gtk/menu.h
+		Add another menu data type
+	* src/prefs_account.c
+		Complete the completion of bug 1076
+		(doesn't lose the pref on apply)
+
 2006-12-12 [paul]	2.6.1cvs21
 
 	* src/prefs_account.c
